clusters/k3s-homelab/flux-system/ingress-flux-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  ingressClassName: traefik
  rules:
  - host: flux-webhook.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: webhook-receiver
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - flux-webhook.brmartin.co.uk
    secretName: wildcard-brmartin-tls
